# Streamlit-template-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  StreamlitApp.spec  app.py  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml
.streamlit/: config.toml
config/: app.yaml  app.yaml.template
docs/: architecture.md  extending.md  troubleshooting.md  user-guide.md
specs/001-streamlit-app-scaffold/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-streamlit-app-scaffold/checklists/: requirements.md
specs/001-streamlit-app-scaffold/contracts/: configuration_schema.yaml  page_interface.md
specs/main/: DIAGNOSIS-RELEASE-FAILURE.md  HOTFIX-MULTIPROCESSING.md  research.md  tasks.md
src/logic/: bundle_utils.py  config_loader.py  logger.py  server_manager.py
src/ui/: main_app.py  sidebar.py
src/ui/components/: error_page.py  placeholder_page.py
src/ui/pages/: about.py  feature1.py  feature2.py  home.py  test_custom.py
